# pianity-smartcontracts-next

./: .gitignore  .koumurc.toml  Cargo.toml  README.md  entrypoint-bak.rs  koumurc.json  package.json  tsconfig.json
.husky/: commit-msg
definition/: Cargo.toml
definition/src/: action.rs  error.rs  generate_types.rs  state.rs
erc1155/: Cargo.toml  package.json
erc1155/definition/: Cargo.toml
erc1155/definition/bindings/ts/: Action.ts  ContractError.ts  State.ts  package.json
erc1155/definition/src/: action.rs  error.rs  generate_json.rs  state.rs
erc1155/implementation/: Cargo.toml
erc1155/implementation/src/: contract.rs  kv_storage.rs  lib.rs  state.rs  utils.rs
erc1155/implementation/src/actions/: approval.rs  balance.rs  batch.rs  burn.rs  configure.rs  evolve.rs  get_all_tokens.rs  get_token.rs  initialize.rs  mint.rs  mod.rs  read_settings.rs  transfer.rs
erc1155/implementation/src/contract_utils/: entrypoint.rs  foreign_call.rs  js_imports.rs
erc1155/kv_macro/: Cargo.toml  macro_bak.rs
erc1155/kv_macro/src/: lib.bak.rs  lib.rs
erc1155/kv_storage/: Cargo.toml  example_state.md
erc1155/kv_storage/src/: lib.rs  takes_ref.rs
fee/: koumurc.json  package.json
fee/definition/: Cargo.toml
fee/definition/src/: action.rs  error.rs  generate_json.rs  lib.rs  state.rs
fee/implementation/: Cargo.toml
fee/implementation/src/: contract.rs  utils.rs
fee/implementation/src/actions/: batch.rs  configure.rs  create_fee.rs  evolve.rs  mint_nft.rs  mod.rs  transfer.rs
fee/implementation/src/contract_utils/: entrypoint.rs  foreign_call.rs
implementation/: Cargo.toml
implementation/src/: contract.rs  lib.rs
implementation/src/actions/: approval.rs  balance.rs  batch.rs  configure.rs  evolve.rs  foreign_read.rs  foreign_write.rs  mint.rs  mod.rs  transfer.rs
implementation/src/contract_utils/: entrypoint.rs  mod.rs
kv-macro/: Cargo.toml
kv-macro/src/: lib.rs
kv-storage/: Cargo.toml
kv-storage/src/: lib.rs
lock/: Cargo.toml  package.json
lock/definition/: Cargo.toml
lock/definition/bindings/ts/: Action.ts  ContractError.ts  State.ts  index.d.ts  package.json
lock/definition/src/: action.rs  error.rs  generate_json.rs  state.rs
lock/implementation/: Cargo.toml
lock/implementation/src/: contract.rs  state.rs  utils.rs
lock/implementation/src/actions/: batch.rs  configure.rs  evolve.rs  get_all_vaults.rs  get_vault.rs  initialize.rs  mod.rs  transfer_locked.rs  unlock.rs
lock/implementation/src/contract_utils/: entrypoint.rs  foreign_call.rs  js_imports.rs
lock/scripts/: generate-ts.ts
packs/: package.json
packs/definition/: Cargo.toml
packs/definition/src/: action.rs  error.rs  state.rs
packs/implementation/: Cargo.toml
packs/implementation/src/: contract.rs  utils.rs
packs/implementation/src/actions/: batch.rs  configure.rs  evolve.rs  mint_pack.rs  mod.rs  open_pack.rs
packs/implementation/src/contract_utils/: entrypoint.rs  foreign_call.rs  js_imports.rs
packs/trash/: approval.rs  create_fee.rs  test_read.rs  transfer.rs
scarcity/: package.json
scarcity/definition/: Cargo.toml
scarcity/definition/bindings/ts/: Action.ts  ContractError.ts  State.ts  package.json
scarcity/definition/src/: action.rs  error.rs  generate_json.rs  state.rs
scarcity/implementation/: Cargo.toml
scarcity/implementation/src/: contract.rs  lib.rs  state.rs  utils.rs
scarcity/implementation/src/actions/: attach_fee.rs  attach_royalties.rs  batch.rs  configure.rs  create_fee.rs  edit_attached_royalties.rs  evolve.rs  get_all_royalties.rs  get_attached_royalties.rs  get_royalties.rs  initialize.rs  mint_nft.rs  mod.rs  proxy_transfer.rs  remove_attached_royalties.rs  transfer.rs
scarcity/implementation/src/contract_utils/: entrypoint.rs  foreign_call.rs  js_imports.rs  mod.rs
scarcity/scripts/: generate-ts.ts
scripts/: json2ts.ts
shuffle/: package.json
shuffle/definition/: Cargo.toml
shuffle/definition/bindings/ts/: Action.ts  ContractError.ts  State.ts  package.json
shuffle/definition/src/: action.rs  error.rs  state.rs
shuffle/implementation/: Cargo.toml
shuffle/implementation/src/: contract.rs  utils.rs
shuffle/implementation/src/actions/: batch.rs  configure.rs  evolve.rs  mint_shuffle.rs  mod.rs  open_shuffle.rs  open_shuffle_batch.rs
shuffle/implementation/src/contract_utils/: entrypoint.rs  foreign_call.rs  js_imports.rs
shuffle/scripts/: generate-ts.ts
src/: action.rs  contract.rs  error.rs  lib.rs  state.rs  utils.rs
src/actions/: approval.rs  balance.rs  batch.rs  configure.rs  evolve.rs  foreign_read.rs  foreign_write.rs  mint.rs  mod.rs  transfer.rs
src/contract_utils/: entrypoint.rs  handler_result.rs
tests/: jest.config.ts  jest.setup.ts  package.json  tsconfig.json  vite.config.ts
tests/src/: erc1155.test.ts  fee.test.ts  index.ts  lock.test.ts  packs.test.ts  scarcity.test.ts  shuffle.test.ts  utils.ts
