[package]
name = "warp-rust-erc1155"
version = "0.1.0"
authors = ["Sample smartweave contract"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.29" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.56"
async-recursion = "1.0.0"
tokio-test = "0.4.2"
schemars = "0.8.10"

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false
