[package]
name = "warp-erc1155-implementation"
version = "0.1.0"
authors = ["Eyal Chojnowski"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
warp-erc1155 = { path = "../definition" }
kv-storage = { path = "../../kv-storage" }
wasm-bindgen = { version = "=0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "=0.4.34" }
serde = { version = "1.0", features = ["derive"] }
js-sys = "=0.3.61"
serde-wasm-bindgen = "=0.5.0"
async-recursion = "1.0.0"
async-trait = "0.1.56"
tokio-test = "0.4.2"

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false

[profile.release]
debug = true
