[package]
name = "kv_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv_macro = { path = "../kv_macro" }
async-trait = "0.1.56"
serde = { version = "1.0", features = ["derive"] }
tokio-test = "0.4.2"
# tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0"
