[package]
name = "warp-fee"
version = "0.1.0"
authors = ["Eyal Chojnowski"]
edition = "2021"

[dependencies]
warp-erc1155 = { path = "../../warp-rust-erc1155/definition" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.10"
# wasm-bindgen = { version = "=0.2.79", features = ["serde-serialize"] }
