[package]
name = "warp-fee-implementation"
version = "0.1.0"
authors = ["Sample smartweave contract"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
warp-fee = { path = "../definition" }
warp-erc1155 = { path = "../../warp-rust-erc1155/definition" }
wasm-bindgen = { version = "=0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.29" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3.56"
async-recursion = "1.0.0"
async-trait = "0.1.56"
tokio-test = "0.4.2"

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false
